--- a/Mathematical_Papers.tex
+++ b/Mathematical_Papers.tex
@@ -399,7 +399,7 @@ see \cite{d2013mixed}
 \item overview over MILP
 \item overview over NLP
 \item overview over MINLP
-\item overvie over MINLP solvers
+\item overview over MINLP solvers
 \end{itemize}
 
 \section{Other algorithms}
