--- a/library.bib
+++ b/library.bib
@@ -23,3 +23,226 @@
   publisher={Der andere Verlag T{\"o}nning, L{\"u}beck, Marburg}
 }
 
+@article{bonami2008algorithmic,
+  title={An algorithmic framework for convex mixed integer nonlinear programs},
+  author={Bonami, Pierre and Biegler, Lorenz T and Conn, Andrew R and Cornu{\'e}jols, G{\'e}rard and Grossmann, Ignacio E and Laird, Carl D and Lee, Jon and Lodi, Andrea and Margot, Fran{\c{c}}ois and Sawaya, Nicolas and others},
+  journal={Discrete Optimization},
+  volume={5},
+  number={2},
+  pages={186--204},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{abhishek2010filmint,
+  title={FilMINT: An outer approximation-based solver for convex mixed-integer nonlinear programs},
+  author={Abhishek, Kumar and Leyffer, Sven and Linderoth, Jeff},
+  journal={INFORMS Journal on computing},
+  volume={22},
+  number={4},
+  pages={555--567},
+  year={2010},
+  publisher={INFORMS}
+}
+
+@article{kesavan2004outer,
+  title={Outer approximation algorithms for separable nonconvex mixed-integer nonlinear programs},
+  author={Kesavan, Padmanaban and Allgor, Russell J and Gatzke, Edward P and Barton, Paul I},
+  journal={Mathematical Programming},
+  volume={100},
+  number={3},
+  pages={517--535},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{burer2012non,
+  title={Non-convex mixed-integer nonlinear programming: A survey},
+
+  author={Burer, Samuel and Letchford, Adam N},
+  journal={Surveys in Operations Research and Management Science},
+  volume={17},
+  number={2},
+  pages={97--106},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{quesada1992lp,
+  title={An LP/NLP based branch and bound algorithm for convex MINLP optimization problems},
+  author={Quesada, Ignacio and Grossmann, Ignacio E},
+  journal={Computers \& chemical engineering},
+  volume={16},
+  number={10-11},
+  pages={937--947},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@article{leyffer2001integrating,
+  title={Integrating SQP and branch-and-bound for mixed integer nonlinear programming},
+  author={Leyffer, Sven},
+  journal={Computational optimization and applications},
+  volume={18},
+  number={3},
+  pages={295--309},
+  year={2001},
+  publisher={Springer}
+}
+
+@article{nannicini2012rounding,
+  title={Rounding-based heuristics for nonconvex MINLPs},
+  author={Nannicini, Giacomo and Belotti, Pietro},
+  journal={Mathematical Programming Computation},
+  volume={4},
+  number={1},
+  pages={1--31},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{raman1994modelling,
+  title={Modelling and computational techniques for logic based integer programming},
+  author={Raman, Ramesh and Grossmann, Ignacio E},
+  journal={Computers \& Chemical Engineering},
+  volume={18},
+  number={7},
+  pages={563--578},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{duran1986outer,
+  title={An outer-approximation algorithm for a class of mixed-integer nonlinear programs},
+  author={Duran, Marco A and Grossmann, Ignacio E},
+  journal={Mathematical programming},
+  volume={36},
+  number={3},
+  pages={307--339},
+  year={1986},
+  publisher={Springer}
+}
+
+@incollection{d2012algorithmic,
+  title={An algorithmic framework for MINLP with separable non-convexity},
+  author={D'Ambrosio, Claudia and Lee, Jon and W{\"a}chter, Andreas},
+  booktitle={Mixed Integer Nonlinear Programming},
+  pages={315--347},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{sager2011combinatorial,
+  title={Combinatorial integral approximation},
+  author={Sager, Sebastian and Jung, Michael and Kirches, Christian},
+  journal={Mathematical Methods of Operations Research},
+  volume={73},
+  number={3},
+  pages={363},
+  year={2011},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{sager2009direct,
+  title={Direct methods with maximal lower bound for mixed-integer optimal control problems},
+  author={Sager, Sebastian and Bock, Hans Georg and Reinelt, Gerhard},
+  journal={Mathematical Programming},
+  volume={118},
+  number={1},
+  pages={109--149},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{d2013mixed,
+  title={Mixed integer nonlinear programming tools: an updated practical overview},
+  author={D'Ambrosio, Claudia and Lodi, Andrea},
+  journal={Annals of Operations Research},
+  volume={204},
+  number={1},
+  pages={301--320},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{karuppiah2008lagrangean,
+  title={A Lagrangean based branch-and-cut algorithm for global optimization of nonconvex mixed-integer nonlinear programs with decomposable structures},
+  author={Karuppiah, Ramkumar and Grossmann, Ignacio E},
+  journal={Journal of global optimization},
+  volume={41},
+  number={2},
+  pages={163--186},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{peng2005coordinating,
+  title={Coordinating multiple robots with kinodynamic constraints along specified paths},
+  author={Peng, Jufeng and Akella, Srinivas},
+  journal={The International Journal of Robotics Research},
+  volume={24},
+  number={4},
+  pages={295--310},
+  year={2005},
+  publisher={SAGE Publications}
+}
+
+@article{borchers1994improved,
+  title={An improved branch and bound algorithm for mixed integer nonlinear programs},
+  author={Borchers, Brian and Mitchell, John E},
+  journal={Computers \& Operations Research},
+  volume={21},
+  number={4},
+  pages={359--367},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@techreport{nannicini2009rounding,
+  title={Rounding-based heuristics for nonconvex minlps with binary variables},
+  author={Nannicini, G and Belotti, P},
+  year={2009},
+  institution={Technical report, Working paper}
+}
+
+@article{hijazi2010outer,
+  title={An outer-inner approximation for separable MINLPs},
+  author={Hijazi, Hassan and Bonami, Pierre and Ouorou, Adam},
+  journal={LIF, Facult{\'e} des Sciences de Luminy, Universit{\'e} de Marseille, Tech. Rep},
+  year={2010}
+}
+
+@article{mahajan2012solving,
+  title={Solving mixed-integer nonlinear programs by QP-diving},
+  author={Mahajan, Ashutosh and Leyffer, Sven and Kirches, Christian},
+  journal={Preprint ANL/MCS-2071-0312, Argonne National Laboratory, Mathematics and Computer Science Division},
+  pages={19--24},
+  year={2012}
+}
+
+@article{sager2012integer,
+  title={The integer approximation error in mixed-integer optimal control},
+  author={Sager, Sebastian and Bock, Hans Georg and Diehl, Moritz},
+  journal={Mathematical Programming},
+  volume={133},
+  number={1-2},
+  pages={1--23},
+  year={2012},
+  publisher={Springer}
+}
+
+@inproceedings{schmitt2017manipulation,
+  title={Optimal, Sampling-Based Manipulation Planning},
+  author={Schmitt, Philipp S. and Neubauer, Werner and Feiten, Wendelin and Wurm, Kai M. and v. Wichert, Georg and Burgard, Wolfram},
+  booktitle={},
+  year={2017}
+}
+
+@inproceedings{gammell2014informed,
+  title={Informed RRT*: Optimal sampling-based path planning focused via direct sampling of an admissible ellipsoidal heuristic},
+  author={Gammell, Jonathan D and Srinivasa, Siddhartha S and Barfoot, Timothy D},
+  booktitle={Intelligent Robots and Systems (IROS 2014), 2014 IEEE/RSJ International Conference on},
+  pages={2997--3004},
+  year={2014},
+  organization={IEEE}
+}
