--- a/Mathematical_Papers.tex
+++ b/Mathematical_Papers.tex
@@ -7,9 +7,10 @@
 \usepackage{amsmath}	% for formulas
 \usepackage{amssymb} % for mathbb	
 \usepackage[margin=1in]{geometry} % for definition of margin     
-\usepackage{hyperref}
-\usepackage{color}
-\usepackage{cite}
+\usepackage{hyperref} % for \ref, \eqref, \url(?)
+\usepackage[dvipsnames]{xcolor} % for textcolors
+\usepackage{cite} % for citations
+\usepackage{verbatim} % for comment environment
 \title{\textbf{Overview over Mathematical MINLP Papers}}
 %\author{}
 \date{}
@@ -46,14 +47,12 @@ Optimal Control Problems in AMPL
 \item Ruiz, Grossmann: Global Optimization of Non-convex Generalized
 Disjunctive Programs: A Review on Relaxations and Solution Methods (maybe similar methods can be used for non-convex MINLPs?)
 \item Grossmann: Cutting planes for improved global logic-based outer approximation
-for the synthesis of process networks (similar to non-convex outer approximation for MINLPs of Kesvan et al, but for non-convex generalized disjunctive programs instead)
+for the synthesis of process networks (similar to non-convex outer approximation for MINLPs of Kesavan et al, but for non-convex generalized disjunctive programs instead)
 \end{itemize}
 \subsection{Fragen an Sebastian}
 \begin{itemize}
 \item Sager: methods for MINLP that come from MIOCPs (mixed integer optimal control problems) by "first discretize, then optimize". Therefore large number of integer variables s.t. standard techniques like nonlinear Branch-and-Bound and Outer Approximation fail. This is not what we are planning to do?!
 \item MIOCPs? Was bedeutet optimal control genau? We'll have robot dynamics instead of ODE. Trotzdem MIOCP-Paper, nicht lieber allgemeines MINLP paper?
-\item Sager, Kirches: immer MIOCPs, oft mit discrete decisions, huge number of integer variables (after discretization)
-\item outer approximation: usually only for convex MINLPs. Trotzdem so ein Paper nehmen oder explizit was zu non-convex suchen (was schwierig ist)?
 \item our problem: separable functions? Can be made separable by factorization? Zu speziell?
 \item problem size?
 \item Modell soll gesamtes Problem (inklusive Dynamik) beschreiben?!
@@ -62,18 +61,24 @@ for the synthesis of process networks (similar to non-convex outer approximation
 \newpage
 \section{Branch-and-Bound based approaches}
 \subsection{Combinatorial integral approximation [2010, Sager, Jung, Kirches]}
-see \cite{sager2011combinatorial}
+see \cite{sager2011combinatorial}\\
+\textcolor{orange}{UNCLEAR} whether convex or non-convex (pretend non-convex)
 \begin{itemize}
 \item focus on MINLP arising from "first discretize, then optimize" of MIOCPs, focus on combinatorial constraints
+\item MIOCP: one control binary, can only change values on a prefixed time grid, minimize Mayer term
 \item decomposition of MINLP into NLP and MILP (both can be solved comparatively efficiently)
 \item discuss bounds for gap between MILP ad MINLP solution
-\item propose tailored Branch and Bound strategy
 \item approximation results:
 	\begin{itemize}
 	\item theorem stating how difference of solutions to initial value problem depends on integrated difference between control functions and difference between initial values
 	\item estimate on integral over difference between control functions
 	\item if discretization grid is fine enough, no integer gap exists
 	\end{itemize}
+\item new method:
+	\begin{itemize}
+	\item based on combinatorial approximation of integral over control deviations
+	\item propose tailored, structure exploiting Branch and Bound strategy for MILP
+	\end{itemize}	 
 \end{itemize}
 \subsection{The Lagrangian Relaxation for the Combinatorial Integral Approximation Problem [2012, Jung, Sager]}
 \begin{itemize}
@@ -82,16 +87,20 @@ see \cite{sager2011combinatorial}
 \item prove polynomial runtime in special cases
 \end{itemize}
 \subsection{Solving Mixed-Integer Nonlinear Programs by QP-Diving [2012, Mahajan, Leyffer, Kirches]}
-\textcolor{red}{PROBLEM:} convexity
+see \cite{mahajan2012solving}\\
+\textcolor{red}{CONVEX}
 \begin{itemize}
 \item new variant of Branch-and-Bound
+\item main motivation: lack of hot-start capabilities in nonlinear solvers (a "hot-start" being a sikve that sodes not require any factorizations but takes advantage of factorizations of parent node and rank-one updates)
 \item rather than solving expensive NLP at each node of Branch-and-Bound tree, solve quadratic approximation (QP approximation) at every node
-\item use WP solves that can be hot-started
-\item global convergence properties for convex MINLPs
+\item use QP solves that can be hot-started
+\item global convergence properties for convex MINLPs (by adjusting BB rules in a suitable manner)
+\item implemented in \texttt{MINOTAUR}, a toolkit written in C++ for solving MINLP problems
 \end{itemize}
 
 \subsection{A Lagrangean based Branch-and-Cut algorithm for global optimization of nonconvex MINLPs with decomposable structures [Grossmann, Karuppiah, 2008]}
-see \cite{karuppiah2008lagrangean}
+see \cite{karuppiah2008lagrangean}\\
+\textcolor{green}{NON-CONVEX}
 \begin{itemize}
 \item decomposable structures often arise in two-stage stochastic programming problems
 \item decomposable here means: objective function can be written as sum of simpler functions
@@ -113,19 +122,20 @@ see \cite{karuppiah2008lagrangean}
 \end{itemize}
 
 \subsection{Integrating SQP and Branch-and-Bound for Mixed Integer Nonlinear Programming [Leyffer, 2001]}
-see \cite{leyffer2001integrating}
+see \cite{leyffer2001integrating}\\
+\textcolor{red}{CONVEX}
 \begin{itemize}
 \item in contrast to "decomposition" approaches (like BB, OA) separating nonlinear part from integer part, Leyffer suggests integrated approach
 \item BB approach, but: NLP problem at each node does not need to be solved to optimality
 \item instead: branching is allowed after each iteration of NLP solver (here: Sequential Quadratic Programming solver), i.e. branch early\\
 $\rightarrow$ non-linear part of MINLP is thus solved whilst searching the tree, i.e. tree search and iterative solution of NLP are interlaced
-\item idea first presented in \cite{borchers1994improved}, improvements in this paper
+\item idea first presented in \cite{borchers1994improved} by Borchers and Mitchell, improvements in this paper:
 	\begin{itemize}
 	\item prove that no need for computing lower bounds
 	\item use own SQP solver
 	\item new heuristic when to branch early
 	\end{itemize}
-\item idea similar to Quesada and Grossmann \cite{quesada1992lp} but they solve NLP problems at some nodes, new solver usually solves only one QP problem at each node
+\item idea similar to Quesada and Grossmann \cite{quesada1992lp} (LP/NLP based BB) but they solve NLP problems at some nodes, new solver usually solves only one QP problem at each node
 \item algorithm \emph{only for convex} MINLP, only heuristic for non-convex
 \item convergence proof, even global when slight changes (use trust-region method to enforce global convergence for SQP)
 \item heuristic for non-convex MINLP: nodes no longer fathomed if QP problem is infeasible, instead solve feasibility problem until feasible QP problem is encountered
@@ -135,7 +145,7 @@ $\rightarrow$ non-linear part of MINLP is thus solved whilst searching the tree,
 \newpage
 \section{Outer-approximation based approaches}
 \subsection{FilMINT: An Outer-Approximation-Based Solver for Nonlinear Mixed Integer Programs [Abhishek, Leyffer, Linderoth, 2008]}
-\textcolor{red}{PROBLEM:} convexity
+\textcolor{red}{CONVEX}
 \begin{itemize}
 \item solver for convex MINLPs at cost which is a small multiple of cost of a comparable MILP, implementing linearization-based algorithm
 \item avoids complete re-solution of master MILP by adding new linearizations at open nodes of branch-and-bound tree whenever integer solution is found
@@ -152,11 +162,11 @@ $\rightarrow$ non-linear part of MINLP is thus solved whilst searching the tree,
 \subsection{Outer approximation algorithms for separable nonconvex mixed-integer nonlinear programs [Kesavan, Allgor, Gatzke, Barton, 2004]}
 \label{sec:OA_nonconvex}
 see \cite{kesavan2004outer}\\
-\textcolor{green}{Promising}\\
-\textcolor{red}{PROBLEM:} old\\
+\textcolor{green}{NONCONVEX, promising}\\
+\textcolor{red}{old}\\
 \textbf{What?} 
 \begin{itemize}
-\item  decomposition approach constisting of solving alternating sequence of relaxed master MILPs and two NLPs
+\item  decomposition approach consisting of solving alternating sequence of relaxed master MILPs and two NLPs (trying to extend OA to non-convex case)
 \item use Primal Bounding Problems, i.e. a convex NLP solved at each iteration to derive valid outer approximations of nonconvex functions in continous space
 \item convergence and optimality properties proven
 \item for non-convex MINLPs: recently a couple of algorithms based ond branch-and-bound strategies have been developed (e.g. branch-and-reduce, $\alpha$BB, spatial BB...). All based on solving lower bounding relaxed master problem, upper bounding primal problem at each node of BB tree. Only differ in formulation of master and primal problem and heuristic braching strategy.
@@ -165,12 +175,12 @@ see \cite{kesavan2004outer}\\
 	\begin{itemize}
 	\item \textbf{Lower Bounding Convex MINLP ($P_1$}): solution yields lower bound to global solution of original problem ($P$)
 		\begin{itemize}
-		\item convexify and underestimate non-convex functions in continuous variables (remember that ($P$) is separable). The closer this under-estimator to convex envelope, the tighter lower bound
+		\item \textcolor{blue}{convexify} and underestimate non-convex functions in continuous variables (remember that ($P$) is separable). The closer this under-estimator to convex envelope, the tighter lower bound
 		\item this modified problem ($P_1$) contains feasible set of ($P$) s.t. solution represents valid lower bound
 		\end{itemize}
 	\item \textbf{Master Problem ($M$)}: MILP, solution yields lower bound to global solution of ($P$)
 		\begin{itemize}
-		\item ($P_1$) is convex MINLP s.t. outer approximation can be used to derive equivalent MILP ($M$)
+		\item ($P_1$) is convex MINLP s.t. \textcolor{blue}{outer approximation} can be used to derive equivalent MILP ($M$)
 		\item as ($P_1$) and ($M$) are equivalent, solution of ($M$) yields lower bound to original problem ($P$)
 		\end{itemize}
 	\item \textbf{Relaxed Master Problem ($M^k$)}: MILP, solution is lower bound on subset not yet explored
@@ -179,10 +189,10 @@ see \cite{kesavan2004outer}\\
 		\item integer cuts excluding previously examined integer relalizations are added to Relaxed Master problem
 		\item solution of relaxed master problem yields new integer realization, iteration is repeated
 		\end{itemize}
-	\item \textbf{Primal Problem (NLP($y^j$))}: nonconvex NLP obtained by fixing binary variables ($y=y^j$) in ($P$). Any feasible solution yields upper bound to ($P$)
+	\item \textbf{Primal Problem (NLP($y^j$))}: nonconvex NLP obtained by \textcolor{blue}{fixing binary variables ($y=y^j$) in ($P$)}. Any feasible solution yields upper bound to ($P$)
 	\item \textbf{Primal Bounding Problem (NLPB($y^j$)}): convex NLP
 		\begin{itemize}
-		\item obtained by fixing $y=y^j$ in ($P_1$)
+		\item obtained by \textcolor{blue}{fixing $y=y^j$ in ($P_1$)}
 		\item for fixed realization of $y$ the feasible set of (NLPB($y^j$)) overestimates the feasible set of (NLP($y^j$)) and underestimates the objective function of (NLP($y^j$))
 		\item solution is lower bound to solution of (NLP($y^j$))
 		\item solution tighter lower bound than the bound provided by relaxed master problem generating $y^j$
@@ -202,16 +212,26 @@ see \cite{kesavan2004outer}\\
 	\end{itemize}
 \end{itemize}
 
-\subsection{An Outer-Inner Approximation for separable MINLPs}
+\subsection{An Outer-Inner Approximation for separable MINLPs [Hijazi, Bonami, Ouorou, 2010]}
+see \cite{hijazi2010outer}\\
+\textcolor{red}{CONVEX}
 \begin{itemize}
+
+\item for \emph{convex} MINLPs with separable nonlinear functions
 \item propose three improvements to OA algorithms
-\item for \emph{convex} MINLPs
+	\begin{itemize}
+	\item extended formulation
+	\item refined OA
+	\item heuristic inner approximation of feasible region
+	\end{itemize}
 \item implemented on \texttt{BONMIN}
 \end{itemize}
 
 \newpage
 \section{neither BB- nor OA-based approaches}
-\subsection{The integer approximation error in mixed-integer optimal control [2010, Sager, Bock]}
+\subsection{The integer approximation error in mixed-integer optimal control [2010, Sager, Bock, Diehl]}
+see \cite{sager2012integer}\\
+\textcolor{orange}{UNCLEAR}
 \begin{itemize}
 \item Problem: MINLP that come from discretizing MIOCPs cannot efficiently be solved using nonlinear BnB or outer approximation (due to large number of integer variables)
 \item therefore Sager, Reinelt, Bock suggested another approach in "Direct methods with maximal lower bound for mixed-integer optimal control problems" (\cite{sager2009direct}):
@@ -227,11 +247,11 @@ see \cite{kesavan2004outer}\\
 \end{itemize}
 \subsection{Non-convex mixed-integer nonlinear programming: A survey [Burer, Letchford, 2012]}
 see \cite{burer2012non}\\
-\textcolor{green}{Promising}\\
+\textcolor{green}{NON-CONVEX, Promising}\\
 \textbf{What?} Summary of approaches for solving non-convex MINLPs
 \begin{itemize}
 \item non-convex MINLP are challenging because  continous relaxation in general not convex
-\item key concepts forming main ingredients of all existing eaxct algorithms for non-convex MINLPs
+\item key concepts forming main ingredients of all existing exact algorithms for non-convex MINLPs
 	\begin{itemize}
 	\item \emph{Under- and Over-estimators}
 		\begin{itemize}
@@ -252,6 +272,7 @@ see \cite{burer2012non}\\
 		\begin{itemize}
 		\item introduce new variables and constraints s.t. resulting MINLP involves functions of simpler form
 		\item then find under-/over-estimators for simple functions
+		\item see example on page 99 in \cite{burer2012non}
 		\end{itemize}
 	\item \emph{Branching: standard and spatial}
 		\begin{itemize}
@@ -302,46 +323,51 @@ see \cite{burer2012non}\\
 	\end{itemize}
 \item Software 
 	\begin{itemize}
-	\item packages solving non-convex MINLPs to proven optimality 
-	\item packages which can be used to find heuristic solutions for non-convex MINLPs: BONMIN, DICOPT, etc.
+	\item packages solving non-convex MINLPs to proven optimality:\\
+	 \texttt{BARON, $\alpha$-BB, LINDO-Global, Couenne, GloMIQO} 
+	\item packages which can be used to find heuristic solutions for non-convex MINLPs: \\
+	\texttt{BONMIN, DICOPT, LaGO, MIDACO}
 	\end{itemize}	 
 \end{itemize}
 
 \subsection{An Algorithmic Framework for MINLP with separable non-convexity [D'Ambrosio, Lee, W\"achter, 2012]}
 \label{sec:SQ-MINLP}
-\textcolor{green}{PROMISING}, see \cite{d2012algorithmic}
+see \cite{d2012algorithmic}\\
+\textcolor{green}{NON-CONVEX, Promising}
 \begin{itemize}
 \item suggests simple algorithm using alternating sequence of non-convex NLP restrictions and convex MINLP relaxations
-\item MINLPs with non-convex objective and constraint functions, but sum of non-convex univariate functions (i.e. separable)
+\item for MINLPs with non-convex objective and constraint functions, but sum of non-convex univariate functions (i.e. separable)
 \item employ (repeatedly refined) lower bounding \emph{convex} MINLP relaxation by using piecewise-convex under-estimators
-\item many problems can be brought in assumed form (i.e. separable) by simple substitutions (similar to what is done in first step in spatial branch-and-bound), see also 3.4
+\item many problems can be brought in assumed form (i.e. separable) by simple substitutions (similar to what is done in first step in spatial branch-and-bound), see also 3.4 (page 339) in \cite{d2012algorithmic}
 \item \textbf{Sequential Convex MINLP algorithm }(implemented in AMPL):
 	\begin{itemize}
-	\item first, identify convex and concave subintervals (using MATLAB) by computing points at which convexity/concavity may change (i.e. zeros of second derivative)
+	\item first, identify convex and concave subintervals (using MATLAB) by computing points at which convexity/concavity may change (i.e. zeros of second derivative) (section 2.1)
 	\item then find convex MINLP relaxation (working on these subintervals), handle it using BONMIN solver to find lower bounds
-	\item fix integer values and solve non-convex NLP restriction (using IPOPT) to find upper bounds
-	\item at each step decrease gap between lower and upper bound, use solutions for further refinement following two refinement strategies
+	\item fix integer values and solve non-convex NLP restriction (using IPOPT) to find upper bounds (see section 2.2)
+	\item at each step decrease gap between lower and upper bound, use solutions for further refinement following two refinement strategies (see section 2.3)
 		\begin{itemize}
-		\item based on lower-bounding solution $\underbar{x}$: if $\underbar{x}_k$ lies in concave interval of $g_{ik}$, add $\underbar{x}_k$ as a breakpoint for relaxation of $g_{ik}$
+		\item based on lower-bounding solution $\underbar{x}$: if $\underbar{x}_k$ lies in concave interval of $g_{ik}$, add $\underbar{x}_k$ as additional breakpoint for relaxation of $g_{ik}$
 		\item same based on upper-bounding solution $\bar{x}$
 		\end{itemize}
 	\end{itemize}
 \item \textbf{novelty}: new formulation of convex relaxation: functions approximated only where they are concave, convex parts are taken as they are
 \item comparison to spatial branch-and-bound
 	\begin{itemize}
-	\item refining phase: parts where approximation is bad are improved, but by adding more breakpoints instea of branching!
+	\item refining phase: parts where approximation is bad are improved, but by adding more breakpoints instead of branching!
 	\item directly keep multivariate convex functions in relaxations instead of using linear approximations
 	\end{itemize}
 \item convergence analysis under rather weak assumptions (apart from Lipschitz continuity): either termination at \emph{global solution} or each limit point of lower bound sequence is global solution
 \item computational results: 
 	\begin{itemize}
 	\item for middle sized-problem ($\mathcal{O}(10^2)$) good CPU times (up to two minute), very few iterations needed
+	\item most of time spent in solution of small number of convex MINLPs
 	\item BONMIN sometimes way faster, but is only a heuristic (when used on non-convex problems)! faster than comparable solvers
 \end{itemize}	 
 \end{itemize}
 
 \subsection{An algorithmic framework for convex mixed integer nonlinear programs [Bonami et al., 2008]}
-see \cite{bonami2008algorithmic}
+see \cite{bonami2008algorithmic}\\
+\textcolor{red}{CONVEX}
 \begin{itemize}
 \item introduces algorithmic framework BONMIN which is exact for convex MINLP, can be used as heuristic for non-convex MINLP
 \item use flexible branch-and-cut-scheme, \textbf{combination of BB and OA}
@@ -386,7 +412,6 @@ see \cite{bonami2008algorithmic}
 see \cite{sager2005numerical}
 \begin{itemize}
 \item Chapter 1: MIOCP, Chapter 2: Optimal control, Chapter 3: MINLP
-\item 
 \end{itemize}
 \subsection{Fast Numerical Methods for Mixed-Integer Nonlinear Model-Predictive Control [Kirches, PhD-Thesis, 2010]}
 \subsection{Mixed integer nonlinear programming tools: an updated practical overview [Ambrosio, 2013]}
